<resources>
    <string name="app_name">Instagram</string>
    <string name="login">Login</string>
    <string name="description">Description...</string>
    <string name="take_picture">Take Picture</string>
    <string name="img">Img</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_username">Username</string>
    <string name="item_description">This is my description!!!</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="likes_count">500 likes</string>
    <string name="post_relative_time">My time!!!</string>
    <string name="signup">Signup</string>
    <string name="cancel">Cancel</string>
    <string name="posts">Posts</string>
    <string name="username_feed">danielyamamoto</string>
    <string name="new_compose">new compose</string>
    <string name="settings">settings</string>
    <string name="submit">Submit</string>
</resources>