<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="25dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:textColor="#2B2B2B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/posts" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbDetails">

        <ImageView
            android:id="@+id/ivPicProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/img"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/ivPicProfile"
            android:layout_toStartOf="@id/ivPostSettings"
            android:textStyle="bold"
            tools:text="@string/item_username" />

        <ImageView
            android:id="@+id/ivPostSettings"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/ufi_more"
            tools:srcCompat="@drawable/ufi_more" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivImage"
        android:contentDescription="@string/img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/rlHeader"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <RelativeLayout
        android:id="@+id/llpanels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/ivImage"
        android:layout_marginStart="10dp">

        <ImageView
            android:id="@+id/ivLikePost"
            android:contentDescription="@string/img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/ufi_heart" />

        <ImageView
            android:id="@+id/ivCommentPost"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_toEndOf="@+id/ivLikePost"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/ufi_comment" />

        <ImageView
            android:id="@+id/ivReplyPost"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_toEndOf="@id/ivCommentPost"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/direct" />

        <ImageView
            android:id="@+id/ivSavePost"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/ufi_save" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/llpanels"
        android:layout_marginTop="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" >

        <TextView
            android:id="@+id/tvLikesCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/likes_count" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            tools:text="@string/item_description" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            tools:text="@string/post_relative_time" />

    </LinearLayout>

</RelativeLayout>